...
  "about_openSourceLicences": "Open Source Licences",
  "about_privacyPolicy": "Privacy Policy",
  "about_show": "Show",
  "about_termsOfUse": "Terms of Use",
  "accountDetails_descriptor_legacy": "Legacy",
  "accountDetails_descriptor_segwit": "Segwit",
  "accountDetails_descriptor_taproot": "Taproot",
  "accountDetails_descriptor_wrappedSegwit": "Wrapped Segwit",
...
  "backups_downloadSettingsDataBackupFile": "Download Settings & Data Backup File",
  "backups_downloadSettingsMetadataBackupFile": "Download Settings & Metadata Backup File",
  "backups_erase_mobile_wallet": "Erase Mobile Wallet",
  "backups_erase_wallets_and_backups": "Erase Mobile Wallet and Backups",
  "backups_erase_wallets_and_backups_modal_1_2_android_subheading": "You’re about to permanently delete your Envoy Wallet. \n\nIf you are using Magic Backups, your Envoy Seed will also be deleted from Android Auto Backup. ",
  "backups_erase_wallets_and_backups_modal_1_2_ios_subheading": "You’re about to permanently delete your Envoy Wallet.\n\nIf you are using Magic Backups, your Envoy Seed will also be deleted from iCloud Keychain. ",
  "backups_erase_wallets_and_backups_modal_2_2_subheading": "Any connected Passport accounts will not be removed as part of this process.\n\nBefore deleting your Envoy Wallet, let’s ensure your Seed and Backup File are saved.\n",
  "backups_erase_wallets_and_backups_show_seed_CTA": "Show Seed",
  "backups_erase_wallets_and_backups_show_seed_heading": "Keep Your Seed Private",
  "backups_erase_wallets_and_backups_show_seed_subheading": "Remember to always keep your seed words private. Anyone with access to this seed can spend your Bitcoin!",
  "backups_magicToManualErrorModal_header": "Unable to Continue",
...
  "backups_toggle_envoy_mobile_wallet_key": "Mobile Wallet Key",
  "backups_viewMobileWalletSeed": "View Mobile Wallet Seed",
  "bottomNav_accounts": "Accounts",
  "bottomNav_activity": "Activity",
  "bottomNav_devices": "Devices",
  "bottomNav_learn": "Learn",
  "bottomNav_privacy": "Privacy",
  "bottomNav_transfer": "Transfer",
  "btcpay_connection_modal_expired_subheading": "This voucher expired on {period}.\n\n\nPlease contact the issuer with any voucher-related questions.",
...
  "common_button_contactSupport": "Contact Support",
  "common_button_retry": "Retry",
  "component_12WordSeed": "12 Word Seed",
  "component_24WordSeed": "24 Word Seed",
  "component_Apply": "Apply",
  "component_advanced": "Advanced",
  "component_apply": "Apply",
  "component_areYouSure": "Are you sure?",
  "component_back": "Back",
  "component_cancel": "Cancel",
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
  "component_dismiss": "Dismiss",
  "component_done": "Done",
  "component_dontShowAgain": "Don’t show again",
  "component_exit": "Exit",
...
  "component_notificationText": "Issue establishing Tor connectivity",
  "component_ok": "OK",
  "component_recover": "Recover",
  "component_recoverWithQR": "Recover with QR Code",
  "component_redeem": "Redeem",
...
  "envoy_welcome_screen_subheading": "For a seamless setup, we recommend enabling [[Magic Backups]].\n\nAdvanced users can manually create or restore a wallet seed.",
  "erase_wallet_with_balance_modal_CTA1": "Return to my Accounts",
  "erase_wallet_with_balance_modal_CTA2": "Delete Accounts anyway",
  "erase_wallet_with_balance_modal_subheading": "Before deleting your Envoy Wallet, please empty your Accounts. \nGo to Backups > Erase Wallets and Backups once you’re done.",
  "exploreAddresses_listFilter_unused": "Unused",
...
  "exploreAdresses_activityOptions_editAccountName": "Edit Account Name",
  "exploreAdresses_activityOptions_exploreAddresses": "Explore Addresses",
  "exploreAdresses_activityOptions_showDescriptor": "Show Descriptor",
  "exploreAdresses_activityOptions_signMessage": "Sign Message",
  "export_backup_modal_subheading": "This encrypted file contains useful wallet data such as labels, accounts, and settings.\nThis file is encrypted with your Mobile Wallet Seed. Ensure your seed is backed up securely. ",
...
  "learning_center_title_video": "Videos",
  "learningcenter_status_read": "Read",
  "learningcenter_status_watched": "Watched",
  "magic_setup_generate_backup_heading": "Encrypting Your Backup",
  "magic_setup_generate_backup_subheading": "Envoy is encrypting your wallet backup.\n\nThis backup contains useful wallet data such as tags, notes, accounts, and settings.",
...
  "manual_setup_import_seed_subheading": "Continue below to import an existing seed.\n\nYou’ll have the option to import an Envoy Backup File later.",
  "manual_setup_importingSeedLoadingInfo": "Importing Seed",
  "manual_setup_magicBackupDetected_heading": "Magic Backup Detected",
  "manual_setup_magicBackupDetected_ignore": "Ignore",
  "manual_setup_magicBackupDetected_restore": "Restore",
...
  "manual_toggle_on_seed_backedup_android_wallet_data": "Envoy Backup File",
  "manual_toggle_on_seed_backedup_android_wallet_seed": "Envoy Seed",
  "manual_toggle_on_seed_backedup_iOS_backup_now": "Back up now",
  "manual_toggle_on_seed_backedup_iOS_stored_in_cloud": "Backed up to iCloud Keychain",
  "manual_toggle_on_seed_backedup_iOS_toFoundationServers": "to Foundation Servers",
...
  "privacy_node_connection_couldNotReach": "Couldn't reach node.",
  "privacy_node_connection_localAddress_warning": "Even with ‘Improved Privacy’ active, Envoy cannot prevent interference by compromised devices on your local network.",
  "privacy_node_nodeAddress": "Enter your node address",
  "privacy_node_nodeType_foundation": "Foundation (Default)",
  "privacy_node_nodeType_personal": "Personal Node",
  "privacy_node_nodeType_publicServers": "Public servers",
  "privacy_node_title": "Node",
...
  "receive_tx_list_awaitingConfirmation": "Awaiting confirmation",
  "receive_tx_list_change": "Change",
  "receive_tx_list_receive": "Receive",
  "receive_tx_list_scan": "Scan",
  "receive_tx_list_send": "Send",
...
  "settings_advancedModalReceiveSegwit_title": "Receive to Segwit",
  "settings_advancedModalReceiveTaproot_content": "With this toggle on, Taproot addresses will be generated when you tap receive. Ensure entities sending you Bitcoin are Taproot compatible before proceeding.",
  "settings_advancedModalReceiveTaproot_title": "Receive to Taproot",
  "settings_advanced_enableBuyRamp": "Buy in Envoy",
  "settings_advanced_enabled_signet_modal_link": "Learn more about Signet [[here]].",
...
