...
                  mainAxisSize: MainAxisSize.min,
                  mainAxisAlignment: MainAxisAlignment.start,
                  children: [
                    Align(
                      alignment: Alignment.centerLeft,
                      child: Semantics(
                        identifier: "seed_intro_back_button",
                        button: true,
                        child: GestureDetector(
                          onTap: () {
                            context.pop();
                          },
                          child: const Padding(
...
