...
                                opacity: _isPlaying ? 0.0 : 1.0,
                                child: AnimatedIcon(
                                  icon: AnimatedIcons.play_pause,
                                  progress: _playPauseIconController,
                                  color: Colors.white,
                                  size: 100.0,
                                  semanticLabel: _isPlaying ? 'Pause' : 'Play',
                                ),
                              )
                            : const SizedBox.shrink(),
                      ),
                      if (_isWaitingForPendingSeek)
                        const Positioned.fill(
...
