...
      return Image.asset(
        "assets/indicator_shield_red.png",
        key: const ValueKey("shield-red"),
      );
    }

    _shieldStatus = 'connected';
    return Image.asset(
      "assets/indicator_shield_teal.png",
      key: const ValueKey("shield-teal"),
    );
  }

...
  Widget build(BuildContext context) {
    return Consumer(
      builder: (context, ref, _) {
        ref.watch(settingsProvider);
        _updateShield();
        return Semantics(
          identifier: 'indicator_shield',
          label: _shieldStatus,
          child: Opacity(
            opacity: ConnectivityManager().torCircuitEstablished
                ? 1.0
                : _circuitEstablishingAnimation.value,
            child: AnimatedSwitcher(
...
