# SPDX-FileCopyrightText: 2026 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# (04) deleteWalletWarningPt.2
appId: com.foundationdevices.envoy
---

# go to backups
- tapOn:
    id: hamburger_menu
- tapOn: |-
    BACKUPS
    BACKUPS

# press to erase wallet
- tapOn: Erase Mobile Wallet

# skip dialogs
- tapOn: Continue
- tapOn: Continue

# make sure warning dialog is open
- assertVisible: Delete Accounts anyway

# go home
- tapOn:
    id: PopUp Primary Button
